PetCare project added

--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
 	<!-- google-fonts cdn -->
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Baumans&family=Big+Shoulders+Stencil+Text&family=Faster+One&family=Saira+Condensed&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300&display=swap" rel="stylesheet">
-	<!-- AOS cdn -->
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
+	<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300&display=swap" rel="stylesheet">	
     <!-- animate css cdn -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">    
 	<link rel="shortcut icon" href="images/profile2.jpg">
@@ -49,21 +47,20 @@
 				<div class="collapse navbar-collapse font-18" id="navbar">
 					<ul class="navbar-nav ml-auto">
 						<li class="nav-item">
-							<a href="#intro" class="nav-link font-bu">Introduction</a>
+							<a href="#intro" class="active intro nav-link font-bu">Introduction</a>
 						</li>					
 						<li class="nav-item">
-							<a href="#completed-prj" class="nav-link  font-bu">CompletedProjects</a>
+							<a href="#completed-prj" class="completed-prj nav-link  font-bu">CompletedProjects</a>
 						</li>
 						<li class="nav-item">
-							<a href="#myskills" class="nav-link  font-bu">MySkills</a>
+							<a href="#myskills" class="myskills nav-link  font-bu">MySkills</a>
 						</li>
 						<li class="nav-item">
-							<a href="#services" class="nav-link  font-bu">Services</a>
+							<a href="#services" class="services nav-link  font-bu">Services</a>
 						</li>
 						<li class="nav-item">
-							<a href="#contact" class="nav-link  font-bu">Contact</a>
+							<a href="#contact" class="contact nav-link  font-bu">Contact</a>
 						</li>
-
 					</ul>
 				</div>
 				</div>
@@ -323,9 +320,9 @@
 					</div>							
 				</div>
 				<div class="row">
-					<div class="col-md-6 d-block mx-auto">
+					<div class="col-md-6">
 						 <a href="https://khantphone.github.io/Ecommerce/.">
-						 	<img src="images/Ecommerce.jpg" alt="AdminDashboard" class="img-fluid">
+						 	<img src="images/Ecommerce.jpg" alt="Ecommerce" class="img-fluid">
 						 </a>					 
 						 <h3 class="font-bar mt-4 font-weight-bold text-center font-18 font-bu">Ecommerce
 						 </h3>				  
@@ -336,9 +333,9 @@
 								</a>												
 							 </div>
 					</div>	
-					<div class="col-md-6 d-block mx-auto">
+					<div class="col-md-6">
 						 <a href="https://khantphone.github.io/shopping-site/">
-						 	<img src="images/sneaker-shopping-site.jpg" alt="AdminDashboard" class="img-fluid">
+						 	<img src="images/sneaker-shopping-site.jpg" alt="Sneaker-ShoppingSite" class="img-fluid">
 						 </a>					 
 						 <h3 class="font-bar mt-4 font-weight-bold text-center font-18 font-bu">
 						 	Sneaker-ShoppingSite
@@ -352,14 +349,28 @@
 					</div>	
 				</div>
 				<div class="row">
-					<div class="col-md-6 d-block mx-auto">
+					<div class="col-md-6">
 						 <a href="https://khantphone.github.io/Santos_Travel/">
-						 	<img src="images/santos-travel.jpg" alt="AdminDashboard" class="img-fluid">
+						 	<img src="images/santos-travel.jpg" alt="Santos-Travel" class="img-fluid">
 						 </a>					 
 						 <h3 class="font-bar mt-4 font-weight-bold text-center font-18 font-bu">Santos-Travel
 						 </h3>				  
 							<div class="live-preview mt-4">
 								<a href="https://khantphone.github.io/Santos_Travel/">
+								 	<button class="btn d-block mx-auto px-4 py-2 text-white font-bu bg-fav"><i class="fas fa-eye mr-2"></i> Live Preview
+									</button>
+								</a>												
+							 </div>
+					</div>	
+					<div class="col-md-6">
+						 <a href="https://khantphone.github.io/PetCare/">
+						 	<img src="images/PetCare.jpg" alt="petcare" class="img-fluid">
+						 </a>					 
+						 <h3 class="font-bar mt-4 font-weight-bold text-center font-18 font-bu">
+						 	PetCare
+						 </h3>				  
+							<div class="live-preview mt-4">
+								<a href="https://khantphone.github.io/PetCare/">
 								 	<button class="btn d-block mx-auto px-4 py-2 text-white font-bu bg-fav"><i class="fas fa-eye mr-2"></i> Live Preview
 									</button>
 								</a>												
@@ -653,7 +664,7 @@
 
 	</div>
 	<!-- contact end -->
-
+	
 	<!-- bootstrap js  -->	
 	<script src="library/bootstrap/jquery-3.4.1.slim.min.js"></script>
 	<script src="library/bootstrap/popper.min.js"></script>
@@ -665,9 +676,7 @@
 	<!-- typedJs -->
 	<script src="library/typed-js/typed.min.js"></script>
 	<!-- sweetalert js cdn -->
-	<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-	<!-- AOS js cdn -->
-	<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+	<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>	
 	<!-- wow js cdn -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
 	<script src="js/script.js"></script>	
