some design changes

--- a/index.html
+++ b/index.html
@@ -466,43 +466,12 @@
 						</div>					
 					</div>
 					<div class="col-md-6 col-lg-4 mt-4">
-						<div class="card py-5 px-5 card-3 bg-card">
-							<img src="images/edit-video.png" alt="" width="80" class="img-fluid d-block mx-auto">
-							<div class="card-body ">
-								<h3 class="font-sar font-20 text-center ">Video Editing</h3>
-								<p class="font-bar font-16 text-center mt-3 ">
-								Editing video if neccessary about your Website .</p>
-							</div>
-						</div>					
-					</div>
-					<div class="col-md-6 col-lg-4 mt-4">
-						<div class="card py-5 px-5 card-4 bg-card">
-							<img src="images/conversation.png" alt="" width="80" class="img-fluid d-block mx-auto">
-							<div class="card-body">
-								<h3 class="font-sar font-20 text-center ">Communication</h3>
-								<p class="font-bar font-16 text-center mt-3">
-									Making Website Design & Patterns as You prefer ! 
-								</p>
-							</div>
-						</div>					
-					</div>
-					<div class="col-md-6 col-lg-4 mt-4">
 						<div class="card py-5 px-5 card-5 bg-card">
 							<img src="images/settings.png" alt="" width="80" class="img-fluid d-block mx-auto">
 							<div class="card-body ">
-								<h3 class="font-sar font-20 text-center ">Web Design</h3>
+								<h3 class="font-sar font-20 text-center ">Ui/Ux Design</h3>
 								<p class="font-bar font-16 text-center mt-3 ">
 								Give you advices how Your Website Design should be .</p>
-							</div>
-						</div>					
-					</div>
-					<div class="col-md-6 col-lg-4 mt-4">
-						<div class="card py-5 px-5 card-6 bg-card">
-							<img src="images/bug.png" alt="" width="80" class="img-fluid d-block mx-auto">
-							<div class="card-body "> 
-								<h3 class="font-sar font-20 text-center ">Finding Bugs</h3>
-								<p class="font-bar font-16 text-center mt-3 ">
-								Always taking reponsibility about your Webiste Bugs .</p>
 							</div>
 						</div>					
 					</div>
