--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 	<!-- google-fonts cdn -->
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Baumans&family=Big+Shoulders+Stencil+Text&family=Faster+One&family=Saira+Condensed&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300&display=swap" rel="stylesheet">
-	<!-- AOS cdn -->
-	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">     
+	<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300&display=swap" rel="stylesheet">	
+    <!-- animate css cdn -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">    
 	<link rel="shortcut icon" href="images/profile2.jpg">
 	<link rel="stylesheet" href="css/style.css">
 </head>
@@ -90,7 +90,7 @@
 								enjoyed about Coding .
 							</p>
 							<a href="#completed-prj">
-								<button data-aos="fade-up" class="btn px-4 py-2 font-bu text-white bg-fav mt-3">View My Works
+								<button class="animate__animated wow animate__fadeInUp btn px-4 py-2 font-bu text-white bg-fav mt-3 " >View My Works
 								</button>
 							</a>					
 						</div>
@@ -122,7 +122,7 @@
 							<p class="font-bar font-18 mt-3">Completed courses from <a href="https://aprogrammer.blog/">AProgrammer.blog  . </a></p>
 							<div class="reach-to-me mt-5">
 								<a href="https://www.facebook.com/khant.phonekh">
-									<button data-aos ="fade-up" class="btn px-5 py-2 font-bu text-white bg-fav">Reach Me</button>
+									<button class="animate__animated wow animate__fadeInUp btn px-5 py-2 font-bu text-white bg-fav">Reach Me</button>
 								</a>
 							</div>
 						</div>
@@ -146,8 +146,8 @@
 	                         <!-- education 1 -->
 	                         <div class="education_data">
 	                             <div >
-	                                 <h3 data-aos="fade-in" class=" education_title font-sar" >Programming Basic</h3>
-	                                 <span data-aos="fade-in" class=" education_subtitle text-muted font-bar font-16" >MCM myanmar</span>                                
+	                                 <h3 class="animate__animated wow  animate__fadeIn education_title font-sar" >Programming Basic</h3>
+	                                 <span class="animate__animated wow  animate__fadeIn education_subtitle text-muted font-bar font-16" >MCM myanmar</span>                                
 	                             </div>
 	                             <div>
 	                                 <span class="education_rounder"></span>
@@ -162,16 +162,16 @@
 	                                 <span class="education_line"></span>
 	                             </div>
 	                             <div>
-	                                 <h3 data-aos="fade-in" class=" education_title font-sar">Computer Programming</h3>    
-	                                 <span data-aos="fade-in" class=" education_subtitle text-muted font-bar font-16">Metro IT & Japanese Language Center
+	                                 <h3 class="animate__animated wow  animate__fadeIn education_title font-sar">Computer Programming</h3>    
+	                                 <span class="animate__animated wow  animate__fadeIn education_subtitle text-muted font-bar font-16">Metro IT & Japanese Language Center
 	                                 </span>              
 	                            </div>                             
 	                         </div>
 	                         <!-- education 3 -->
 	                         <div class="education_data">
 	                             <div>
-	                                 <h3 data-aos="fade-in" class=" education_title font-sar">Web Development</h3>
-	                                 <span data-aos="fade-in" class="education_subtitle text-muted font-bar font-16">Metro IT & Japanese Language Center</span>
+	                                 <h3 class="animate__animated wow  animate__fadeIn education_title font-sar">Web Development</h3>
+	                                 <span class="animate__animated wow  animate__fadeIn education_subtitle text-muted font-bar font-16">Metro IT & Japanese Language Center</span>
 	                                 
 	                             </div>
 	                             <div>
@@ -183,11 +183,11 @@
 	                         <div class="education_data">
 	                            <div></div>
 	                            <div>
-	                                 <span  class="education_rounder"></span>                            
+	                                 <span class="education_rounder"></span>                            
 	                             </div>
 	                             <div >
-	                                 <h3 data-aos="fade-in" class=" education_title font-sar ">Java & Database Structures</h3>
-	                                 <span data-aos="fade-in" class=" education_subtitle text-muted font-bar font-16">Metro IT & Japanese Language Center</span>                               
+	                                 <h3 class="animate__animated wow  animate__fadeIn education_title font-sar ">Java & Database Structures</h3>
+	                                 <span class="animate__animated wow  animate__fadeIn education_subtitle text-muted font-bar font-16">Metro IT & Japanese Language Center</span>                               
 	                             </div>                             
 	                         </div>
 	                    </div>
@@ -595,12 +595,12 @@
 					<div id="cutom-border-2"></div>
 				</div>
 				<div class="d-flex justify-content-center mt-3 ml-2">					
-					<button data-aos="fade-up" class=" btn-2 mt-3 " id="change-2"></button>	
-					<button data-aos="fade-up" class=" btn-3 mt-3" id="change-3"></button>			
-					<button data-aos="fade-up" class=" btn-4 mt-3" id="change-4"></button>
-					<button data-aos="fade-up" class=" btn-1 mt-3" id="change-1"></button>	
+					<button class="animate__animated wow animate__fadeInUp btn-2 mt-3 " id="change-2"></button>	
+					<button class="animate__animated wow animate__fadeInUp btn-3 mt-3" id="change-3"></button>			
+					<button class="animate__animated wow animate__fadeInUp btn-4 mt-3" id="change-4"></button>
+					<button class="animate__animated wow animate__fadeInUp btn-1 mt-3" id="change-1"></button>	
 				</div>
-				<p data-aos="fade-out" class="font-bar font-16 text-center mt-4 pb-4">This will change the main colors of the website !</p>
+				<p class="font-bar font-16 text-center mt-4 pb-4 animate__animated wow  animate__fadeIn">This will change the main colors of the website !</p>
 			</div>
 		</section>
 		<!-- customize section end --> 	
@@ -614,8 +614,8 @@
 				</div>			
 					<input type="email" name="email" id="email" placeholder="Email" class="form-control font-bar font-18 border-bt">
 					<input type="text" name="subject" id="subject" placeholder="Subject" class="form-control font-bar font-18 border-bt">				
-					<button data-aos="fade-up" value="send" id = "submit" name ="submit" type = "submit"  
-					 class="btn btn-outline-dark px-5 py-2 font-bu text-white mt-5 d-block mx-auto bg-fav">Send</button>
+					<button  value="send" id = "submit" name ="submit" type = "submit" 
+					 class="animate__animated wow animate__fadeInUp btn btn-outline-dark px-5 py-2 font-bu text-white mt-5 d-block mx-auto bg-fav">Send</button>
 			</div>
 		</section>
 		<!-- contanct section end -->
@@ -646,8 +646,8 @@
 	<script src="library/typed-js/typed.min.js"></script>
 	<!-- sweetalert js cdn -->
 	<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>	
-	<!-- AOS js cdn -->
-	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>			
+	<!-- wow js cdn -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
 	<script src="js/script.js"></script>	
 	
 	</body>
