--- a/index.html
+++ b/index.html
@@ -645,9 +645,10 @@
 	<!-- typedJs -->
 	<script src="library/typed-js/typed.min.js"></script>
 	<!-- sweetalert js cdn -->
+	<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 	<!-- Wowjs -->
 	<script src="js/wow.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+
 	<script src="js/script.js"></script>	
 	
 	</body>
